# balance_control

./: .gitignore  README.md  copy.pl  ddpg_simple_para.json  es-ddpg.pl  es-ppo.pl  gen_vid.sh  lips-ppo.pl  ppo.pl  ppo_simple_para.json  test.pl
CharacterEnv/: .gitignore  Changes  CharacterEnv.xs  MANIFEST  MYMETA.json  MYMETA.yml  Makefile.PL  README  ppo.pl  test.pl  typemap
CharacterEnv/cpp/: CMakeLists.txt
CharacterEnv/cpp/src/: AntEnv.cpp  AntEnv.h  BalancerEnv.cpp  BalancerEnv.h  BoxEnv.cpp  BoxEnv.h  CartpoleEnv.cpp  CartpoleEnv.h  CharacterEnv.cpp  CharacterEnv.h  CustomEventHandler.cpp  CustomEventHandler.h  IOUtil.cpp  IOUtil.h  MathUtil.cpp  MathUtil.h  MimicEnv.cpp  MimicEnv.h  MimicReducedEnv.cpp  MimicReducedEnv.h  MomentumCtrlEnv.cpp  MomentumCtrlEnv.h  OMPEnv.cpp  OMPEnv.h  ParallelEnv.cpp  ParallelEnv.h  QOMPEnv.cpp  QOMPEnv.h  QSample.cpp  QSample.h  QuadEnv.cpp  QuadEnv.h  RodEnv.cpp  RodEnv.h  Sample.cpp  Sample.h  SimCharacter.cpp  SimCharacter.h  SimpleEnv.cpp  SimpleEnv.h  (+2 more)
data/: 0005_Walking001_single_cycle_sim_env.txt  ant.json  ant_env_config.json  ant_env_lower_limits.txt  ant_env_parameters.json  ant_env_upper_limits.txt  balancer.json  balancer_env_config.json  balancer_env_lower_limits.txt  balancer_env_scales.txt  balancer_env_upper_limits.txt  body_node.txt  cartpole.json  cartpole_env_config.json  dofs.txt  env_config.json  force_lower.txt  force_upper.txt  hopper.json  hopper_arms.json  hopper_arms_kd.txt  hopper_arms_kp.txt  hopper_arms_scales.txt  hopper_kd.txt  hopper_scales.txt  humanoid.json  humanoid_reduced.json  indices.txt  kd.txt  kp.txt  mimic_env_config.json  mimic_env_kp.txt  mimic_env_parameters.json  mimic_reduced_env_config.json  mimic_reduced_env_kd.txt  mimic_reduced_env_kp.txt  mimic_reduced_env_lower_limits.txt  mimic_reduced_env_scales.txt  mimic_reduced_env_upper_limits.txt  momentum_ctrl_env_config.json  (+23 more)
tools/: calc-box-moi.pl
(+4 files in other folders)
